--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^15.2.0",
     "@capacitor/android": "^5.2.0",
     "@capacitor/angular": "^2.0.3",
-    "@capacitor/core": "latest",
+    "@capacitor/core": "5.2.1",
     "@capacitor/ios": "^5.2.0",
+    "capacitor": "^0.5.5",
+    "ionic": "^5.4.16",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -30,7 +32,7 @@
     "@angular-devkit/build-angular": "^15.2.3",
     "@angular/cli": "~15.2.3",
     "@angular/compiler-cli": "^15.2.0",
-    "@capacitor/cli": "latest",
+    "@capacitor/cli": "5.2.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
